* Added 'save_anywhere' property to engine/misc.txt. This allows for saving via the pause menu. (m7600)
* Added display of enemies, allies, NPCs, and intermap teleport events to the minimap.
* Added support for defining the colors of tiles and entities on the minimap.

Engine fixes:

* Fix memory leak of tab control in stash menu (MiroslavR)
* Fixed stat bars not having any fill when the value they were representing was non-zero. Now they will always show at least 1 pixel of the bar's fill graphics.
* Fixed a bug where the game window could be resized below the minimum size after exiting fullscreen mode.
* Removed the default resolution scaling when virtual_heights is undefined.

Translation updates:

* Belarusian (be) update (Zmicer Turok)
* German (de) update (Wuzzy2)
* Basque (eu) by aitzkora
* Scottish Gaelic (gd) update (GunChleoc)
* Hungarian (hu) update (litoll)
* Norwegian (nb) update (Elias Nykrem)
* Portuguese (pt) update (Rui)
* Russian (ru) update (Igor Polyakov)
* Slovak (sk) update (MiroslavR)
* Vietnamese (vi) update (Nguyễn Gia Phong)
* Chinese (zh) update (sakura09123)



Flare v1.11 (http://flarerpg.org/index.php/2019/07/27/flare-1-11/)

Engine features:

* Players now have their own private stash in addition to the shared stash.
* Expanded the 'no_stash' Item variable to account for having multiple stashes.

Engine fixes:

* Fix bug where items could be dragged from the vendor window and dropped in the opposite vendor tab.
* Fix bug that caused item max_quantity to be reset when attempting to append an item definition.
* Fix bug where Powers with 'replace_by_effect' would still use properties from the parent power, such as animation state.

Game updates:

* Items that couldn't be stashed in the last update can now be put in the private stash.
* Salted Field: moved chest to the south end of the map to prevent easy farming.

Translation updates:

* Belarusian (be) update (Zmicer Turok)
* German (de) update (Wuzzy2)
* Hungarian (hu) by bzt