@@ -75,21 +75,22 @@ public:
 		SCRIPT = 41,
 		CHANCE_EXEC = 42,
 		RESPEC = 43,
-		NPC_ID = 44,
-		NPC_HOTSPOT = 45,
-		NPC_DIALOG_THEM = 46,
-		NPC_DIALOG_YOU = 47,
-		NPC_VOICE = 48,
-		NPC_DIALOG_TOPIC = 49,
-		NPC_DIALOG_GROUP = 50,
-		NPC_DIALOG_ID = 51,
-		NPC_DIALOG_RESPONSE = 52,
-		NPC_DIALOG_RESPONSE_ONLY = 53,
-		NPC_ALLOW_MOVEMENT = 54,
-		NPC_PORTRAIT_THEM = 55,
-		NPC_PORTRAIT_YOU = 56,
-		QUEST_TEXT = 57,
-		WAS_INSIDE_EVENT_AREA = 58
+		SHOW_ON_MINIMAP = 44,
+		NPC_ID = 45,
+		NPC_HOTSPOT = 46,
+		NPC_DIALOG_THEM = 47,
+		NPC_DIALOG_YOU = 48,
+		NPC_VOICE = 49,
+		NPC_DIALOG_TOPIC = 50,
+		NPC_DIALOG_GROUP = 51,
+		NPC_DIALOG_ID = 52,
+		NPC_DIALOG_RESPONSE = 53,
+		NPC_DIALOG_RESPONSE_ONLY = 54,
+		NPC_ALLOW_MOVEMENT = 55,
+		NPC_PORTRAIT_THEM = 56,
+		NPC_PORTRAIT_YOU = 57,
+		QUEST_TEXT = 58,
+		WAS_INSIDE_EVENT_AREA = 59
 	};
 
 	int type;
