@@ -81,6 +81,7 @@ public:
 	FPoint pos; // map position
 
 	int direction;
+	bool show_on_minimap;
 
 	// talker info
 	Sprite* npc_portrait;
